tests/parser/bug_77/invalid_2.m.out
In invalid_2.m, line 3
| parfor ((i = 1:5), 1)
|         ^ error: expected IDENTIFIER, found BRA instead
MISS_HIT Debug Summary: 1 file(s) analysed, 1 error(s)
