tests/parser/bug_77/invalid_2.m
% (c) Copyright 2020 Florian Schanda

parfor ((i = 1:5), 1)
  disp(i);
end
